--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">OrderPrinting</string>
+    <string name="app_name">好食亿点</string>
+    <string name="phone_number">手机号</string>
+    <string name="password">密码</string>
+    <string name="login_in">登录</string>
 </resources>
