--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="password">密码</string>
     <string name="login_in">登录</string>
     <string name="label_no_conn">未连接打印机【点击连接】</string>
-    <string name="label_conncted">打印机%s【已连接】</string>
+    <string name="label_conncted">打印机%s【点击切换】</string>
     <string name="printer_test_message_0">开始测试&#8230;</string>
     <string name="printer_test_message_1">生成测试页面数据&#8230;</string>
     <string name="printer_test_message_2">生成数据成功，开始创建Socket连接&#8230;</string>
